完善配置，添加模板js

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,9 @@
 /* style.css */
-body { background: yellow; }
+body {
+
+}
 
 #tree{
-    max-height: 200px;
+    min-height: 530px;
     overflow-x: auto;
-    width: 300px;
 }
