personal resume source code commit

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,447 +1,20 @@
-/****下面为修改要求统一的样式***/
-body {
-    font-family: "Microsoft YaHei", "微软雅黑" !important;
+/*高度复用的css样式*/
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
 }
-
-.btn-primary {
-    background-color: #6fb5e1 !important;
-    border-color: #6fb5e1 !important;;
-}
-
-.table-bordered > thead > tr > th,
-.table-bordered > thead > tr > td {
-    border-bottom-width: 0 !important;
-}
-
-.table-bordered > thead > tr > th {
-    background-color: #f7f7f7 !important;
-    font-weight: normal !important;
-    text-align: center !important;
-}
-
-.paginationjs-prev, .paginationjs-page, .paginationjs-next, .J-paginationjs-go-pagenumber, .J-paginationjs-go-button {
-    border-color: #e7ecee !important;
-}
-
-
-.table-layout-fix {
-    table-layout: fixed;
-}
-
-.td-one-Line {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.table {
-    color: #404040;
-    font-size: 12px;
-    margin-bottom: 0 !important;
-}
-
-thead tr th {
-    font-size: 14px !important;
-}
-
-/***去掉input type=number后的spin***/
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type="number"] {
-    -moz-appearance: textfield;
-}
-
-.no-data {
+.text-center{
     text-align: center;
-    height: 400px;
-    line-height: 400px !important;
-    font-size: 30px;
-    color: #ccc;
-    border: 1px solid #e7ecee;
-    border-top: none;
 }
 
-.Wdate[readonly] {
-    cursor: default !important;
-    background-color: #fff !important;
+b, strong {
+    font-weight: 700;
 }
 
-.modal-header {
-    padding-bottom: 0;
-    padding-top: 0;
-    height: 36px;
-    font-size: 14px;
-}
-
-.modal-header .close {
-    margin-top: 6px;
-}
-
-.modal-title {
-    line-height: 36px;
-    font-size: 14px;
-}
-
-.ui-menu-item {
-    font-size: 14px !important;
-}
-
-#common_quote_dialog form label{
-    text-align: left;
-}
-
-#common_quote_dialog form hr{
-    margin-top:0px;
-    margin-bottom: 15px;
-    width: auto;
-    color: #e7ecee;
-    size: 1px;
-    align: center;
-}
-
-/**************左边树与右边内容的padding距离设置**************/
-.left-tree-wrapper {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.right-content-wrapper {
-    padding-left: 25px;
-    padding-right: 25px;
-}
-
-.make_child_center {
-    display: table;
-    margin: 0 auto;
-}
-
-.margin-top-10 {
-    margin-top: 10px !important;
-}
-
-label {
-    font-weight: normal !important;
-}
-
-.form-control[disabled]{
-    cursor: not-allowed !important;
-    background-color: #eee !important;
-}
-.lubandatagrid-row-error{
-    border:1px solid red !important;
-}
-
-/******样式修改 2016年09月20日*****/
-.siderbar{
-    border: 1px solid #e7ecee;
-    border-left:none;
-    width: 100%;
-}
-
-.siderbar>h3{
-    margin-bottom: 0;
-    margin-top:0;
-    height: 36px;
-    background-color: #f7f7f7;
-    font-size: 14px;
-    line-height: 36px;
-    text-align: center;
-    color:#404040;
-}
-
-.siderbar div.input-group input{
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.siderbar div.input-group button{
-    border-color:#e6e6e6;
-    border-left: none;
-}
-
-.siderbar div.input-group button div{
-    width : 100%;
-    height: 100%;
-    background: transparent url("../assets/search-click.png") no-repeat;
-}
-
-.siderbar .input-group-btn{
-    left: 4px;
-}
-.input-group-btn:last-child > .btn {
-    margin-right: 3px;
-}
-.siderbar .input-group-btn{
-    left: 0\0;
-    left: 4px\9;
-}
-.input-group-btn:last-child > .btn {
-    margin-right: 0\0;
-    margin-right: 3px\9;
-}
-#search,
-#input_search,
-#input_tree_search{
-    margin-left: 3px;
-}
-#search,
-#input_search,
-#input_tree_search{
-    margin-left: 0\0;
-    margin-left: 3px\9;
-}
-.top-location{
-    position: absolute;
-    width: 100%;
-    height: 50px;
-    background-color: #e6eeee;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.top-text-location{
-    display: inline-block;
-    height: inherit;
-    line-height: 50px;
-}
-
-.top-location-btns{
-    float: right;
-    height: inherit;
-}
-
-.top-location-btns button{
-    min-width: 138px;
-}
-
-button img{
-    margin-right: 10px;
-}
-
-.real-content-wrapper{
-    width: 100%;
-    height: 100%;
-    padding-top: 50px;
-}
-
-.round-back-color{
-    padding-left: 20px;
-    padding-right: 20px;
-    border: 1px solid #e6e6e6;
-    background-color: #f7f7f7;
-    border-radius: 3px;
-}
-
-.round-border{
-    border: 1px solid #e6e6e6;
-    border-radius: 3px;
-    padding-bottom: 15px;
-}
-
-.advance-search-area{
-    padding-top: 15px;
-    height: 65px;
-}
-
-.advance-search-area button,.advance-search-area input{
-    height: 35px;
-}
-
-.margin-top-30{
-    margin-top: 30px;
-}
-
-.margin-left-right-20{
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.margin-left-right-25{
-    margin-left: 25px;
-    margin-right: 25px;
-}
-
-.margin-left-right-30{
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
-.margin-bottom-30{
-    margin-bottom: 30px;
-}
-
-.margin-top-20{
-    margin-top: 20px;
-}
-
-.margin-bottom-20{
-    margin-bottom: 20px;
-}
-
-.padding-left-right-20{
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-/*************按钮样式**********/
-.btn-orange{
-    color: #FFFFFF;
-    background-color: #fa890e!important;
-    border-radius: 3px;
-    border-color: #fa890e!important;
-}
-
-.btn-blue{
-    color: #FFFFFF;
-    background-color: #428ce5!important;
-    border-radius: 3px;
-    border-color: #428ce5!important;
-}
-
-.btn-orange:hover,.btn-blue:hover,.btn-orange:focus,.btn-blue:focus{
-    color: #FFFFFF;
-}
-
-.btn-ext-nobgcolor {
-    min-width: 100px;
-    min-height: 34px;
-    background: none !important;
-    border: 1px solid #428ce5 !important;
-    padding: 0px 8px !important;
-    color: #428ce5 !important;
-    border-radius: 3px;
-}
-
-.btn-ext-nobgcolor:hover {
-    color: #fff !important;
-    background: #215492 !important;
-    border-radius: 3px;
-}
-
-.btn-ext-nobgcolor:active {
-    color: #fff !important;
-    background: #215492 !important;
-    border-radius: 3px;
-}
-
-.btn-ext-nobgcolor.current-active{
-    color: #fff !important;
-    background: #428ce5 !important;
-}
-
-.btn-top-content-orange{
-    color: #ff991a!important;
-}
-.btn-top-content-blue{
-    color:#4186e6!important;
-}
-
-.btn-top-content-orange,.btn-top-content-blue{
-    width: 138px;
-    height: 50px;
-    max-height: 100%;
-    border: none;
-    background-color: #e7ecee!important;
-}
-
-
-.btn-top-content-orange:hover,.btn-top-content-blue:hover{
-    background-color: #e1e1e1!important;
-}
-
-/************************************/
-.nav-tabs > li > a{
-    color: #000000;
-    background-color: transparent;
-    border: none;
-    height: 50px;
-    line-height: 2.3;
-}
-
-.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus, .nav-tabs > li > a:hover {
-    color: #2a76d1;
-    background-color: transparent;
-    border: none;
-    border-bottom:4px solid #2a76d1;
-    cursor: default;
-}
-
-.nav-tabs > li > a:hover{
-    cursor: pointer;
-}
-
-.table-paging{
-    padding-top: 10px;
-}
-
-
-/*********表格外包裹一层div****************/
-.table_outer_div_wrapper{
-    overflow-x: auto;
-    overflow-y: auto;
-    min-height: 500px;
-    border: 1px solid #dddddd;
-}
-
-.table_outer_div_wrapper table{
-    border: none;
-    border-bottom: 1px solid #dddddd;
-}
-.table_outer_div_wrapper table tr:first-child th {
-    border-top: 0;
-}
-.table_outer_div_wrapper table tr:last-child td {
-    border-bottom: 0;
-}
-.table_outer_div_wrapper table tr td:first-child,
-.table_outer_div_wrapper table tr th:first-child {
-    border-left: 0;
-}
-.table_outer_div_wrapper table tr td:last-child,
-.table_outer_div_wrapper table tr th:last-child {
-    border-right: 0;
-}
-
-/********去除表格最外面的边框************/
-.borderless.table-bordered{
-    border: none;
-    border-bottom: 1px solid #dddddd;
-}
-.borderless tr:first-child th {
-    border-top: 0;
-}
-.borderless tr:last-child td {
-    border-bottom: 0;
-}
-.borderless tr td:first-child,
-.borderless tr th:first-child {
-    border-left: 0;
-}
-.borderless tr td:last-child,
-.borderless tr th:last-child {
-    border-right: 0;
-}
-
-/***************************************/
-#Content_top {
-    line-height: 55px;
-    height: 55px;
-    margin:20px 0px;
-}
-
-#Content_top > * {
-    display: inline-block;
-    height: 32px;
-}
-
-.tr-background-color{
-    background-color:#E7ECEE!important;
-}
-
-.img-span{
-    display: inline-block;
+.txt-indent-20{
+    text-indent: 20px;
 }
