new project branch

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,7 @@ html, body {
     height: 100%;
 }
 html{
-    font-size: 62.5%;  /* 参考无懈可击到web设计 做法 */
+    font-size: 62.5%;  /* 无懈可击到web设计 做法 */
 }
 body {
     font-size: 1.6rem;
