--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 html * {
+    font-family: 'Microsoft YaHei',Arial,'Hiragino Sans GB',md-hsgb,'WenQuanYi Micro Hei',sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -10,291 +11,201 @@ html * {
 html, body {
     /* important for the full-width image to work */
     height: 100%;
+    min-width: 1024px;
 }
 html{
     font-size: 62.5%;  /* 无懈可击到web设计 做法 */
 }
 body {
     font-size: 1.6rem;
-    padding-top: 50px;
 }
 
 a {
     color: white;
     text-decoration: none;
 }
-/*/////*/
-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
+/*-------------------*/
+
+header{
+    height: 460px;
+    background-color:#fc8039;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-image: url("../assets/bg.png") ;
+    background-size: contain;
     color: white;
-    padding: 0 20px 0 20px;
-    font-size: 2rem;
-    background-color: #0f0f0f;
-    z-index: 1;
-}
-.resume-name{
-    color: #9d9d9d;
-}
-.icon-bar{
-    display:inline-block;
-    float: right;
-    margin-top: 10px;
-    width: 42px;
-    height: 30px;
-    border: 2px solid white;
-    border-radius: 10px;
 }
 
-.icon-bar-line {
-    position: relative;
-    display: inline-block;
-    width: 18px;
-    height: 2px;
-    background-color: white;
-    vertical-align: middle;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-.icon-bar-line::before, .icon-bar-line::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: inherit;
-    transition: all 0.2s;
+.header-wrapper{
+    max-width: 960px;
+    margin: 0 auto;
+    padding-left: 100px;
 }
 
-.icon-bar-line::before {
-    top: -6px;
-}
-.icon-bar-line::after {
-    bottom: -6px;
-}
-
-.icon-bar:hover .icon-bar-line::before{
-    top: -8px;
+.logo{
+    display: flex;
+    align-items: center;
+    line-height: 1.2;
+    padding-top: 10px;
 }
 
-.icon-bar:hover .icon-bar-line::after{
-    bottom: -8px;
+.logo-icon{
+    width: 75px;
+    height: 68px;
+    transform: scale(0.5);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url("../assets/logo.png");
+    background-size: cover;
+    /*margin-right: 10px;*/
 }
 
-/*section*/
-.section{
-    padding: 20px 20px;
-    line-height: 1.4;
+.logo-title{
+    font-size: 2.3rem;
 }
-.section-title-wrapper{
+
+.logo-link{
+    font-size: 1.4rem;
+    padding-left: 3px;
+    letter-spacing: 1px;
+}
+
+.banner-text{
+    padding-left: 10px;
+    margin-top: 100px;
+}
+
+.banner-title{
+    font-size: 4rem;
+    margin-bottom: 14px;
+}
+
+.banner-desc{
+
+    font-size: 1.5rem;
+    line-height: 1.8;
+}
+
+
+#contactUs{
+
+}
+
+#aboutUs{
+    background-color: #fafafa;
+}
+
+#aboutUs,#contactUs{
+    padding-top: 70px;
+    padding-bottom: 65px;
+}
+
+.title{
     text-align: center;
-
+    font-size: 2rem;
+    max-width: 100px;
+    margin: 0 auto 40px;
 }
 
-.section-title{
-    font-size: 2.6rem;
-    font-weight:300;
-    color: #22A39F;
-    line-height: 1.2;
+.title:hover hr{
+    transform: scaleX(1);
 }
 
-.section-title-english{
-    font-size: 1.2rem;
-    color: #666666;
-    line-height: 1.2;
+#aboutUs .table-cell{
+    width: 25%;
+}
+
+#contactUs .table-cell{
+    width: 33.3%;
 }
 
 hr{
-    margin: 15px 0;
-    width: auto;
-    height: 1px;
-    /*border-color: #727878;*/
-    opacity: 0.6;
+    height: 2px;
+    border: 0;
+    border-top: 2px solid orange;
+    margin: 1em 0;
+    padding: 0;
+    transition: transform 0.2s linear;
+    transform: scaleX(0.4);
 }
 
-.base-info-desc{
-    text-align: left;
-    display: inline-block;
-}
-
-.change-Background-color{
-    background-color: #f2efe0;
-}
-
-.xmu-logo{
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #eee;
-    background-size: cover;
-    background-image:url('../assets/xmu_logo.png');
-}
-
-.list-desc-wrapper{
-    display:inline-block;
-    max-width: 480px;
-    text-align: left;
-}
-
-.experience-time{
-    color: #444;
-}
-
-.ul-skill{
-    list-style-type: disc;
-    padding-left: 40px;
-}
-
-#contact{
-    padding: 30px 20px;
-    background-color: #424242;
-    color: white;
-    font-weight: lighter;
-
-}
-
-#contact-way-icon{
-    display:none;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    background-color: #2b669a;
-    border-radius: 6px 0 0 0;
-    padding: 10px 0 10px 10px ;
-    color: white;
-    font-size: 1.4rem;
-    max-width: 100%;
-    box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
-}
-
-#contact-way-icon:hover{
-    cursor: pointer;
-    background-color: #0a739a;
-}
-
-#contact-way-icon.is-visible{
+.table{
     display: table;
-}
-
-.contact-title{
-    display: table-cell;
-    line-height: 1.2;
-    padding-right: 10px;
-}
-
-.real-contact-content{
-    display: none;
-    vertical-align: middle;
-    line-height: 1.4;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 1.6rem;
-    border-left: 1px solid #fff;
-    transition: all 0.4s ease;
-    width: 0;
-    opacity: 0;
-}
-
-.real-contact-content.is-visible{
-    display: table-cell;
-    width: auto;
-    opacity: 1;
-}
-
-#main-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
-    background: #eeecf5;
-    /* Force Hardware Acceleration in WebKit */
-    -webkit-transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-
-    transform: translateY(-100%);
-
-    transition-property: transform;
-
-    transition-duration: 0.5s;
-    z-index: 3;
-}
-#main-nav ul {
-    height: 100%;
-}
-#main-nav li {
-    height: 20%;
+    margin: 0 auto;
+    max-width: 1024px;
+    text-align: center;
 }
 
-#main-nav li:hover {
-    background-color: white;
-    cursor: pointer;
+.table-cell{
+    display: table-cell;
+    text-align: center;
 }
 
-#main-nav li a {
-    position: relative;
+.about-desc {
+    text-align: left;
+    display: inline-block;
+    max-width: 130px;
+
+}
+
+.about-cell-img,.contact-cell-img{
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: inline-block;
+}
+
+.about-cell-img{
+    width: 80px;
+    height: 80px;
+}
+
+.contact-cell-img{
+    width: 80px;
+    height: 80px;
+}
+
+.img-borrow{
+    background-image: url("../assets/icon1.png");
+}
+.img-request{
+    background-image: url("../assets/icon2.png");
+}
+.img-quota{
+    background-image: url("../assets/icon3.png");
+}
+.img-people{
+    background-image: url("../assets/icon4.png");
+}
+.img-phone{
+    background-image: url("../assets/icon5.png");
+}
+
+.img-mail{
+
+    background-image: url("../assets/icon6.png");
+}
+
+.img-register-location{
+    background-image: url("../assets/icon7.png");
+}
+
+em.block{
+    padding: 20px 0;
+    font-size: 1.8rem;
     display: block;
-    padding: 0 10%;
-    height: 100%;
-    border-bottom: 1px solid #dfdbec;
-    color: #3a393f;
-    font-size: 2rem;
-    font-weight: bold;
-}
-#main-nav li a span {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-}
-.no-touch #main-nav li a:hover {
-    background-color: #FFF;
-}
-#main-nav li:last-child a {
-    border-bottom: none;
-}
-#main-nav .cd-close-menu {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-color: #d26c64;
-    /* image replacrement */
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-}
-#main-nav .cd-close-menu::before, #main-nav .cd-close-menu::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: 18px;
-    left: 10px;
-    width: 20px;
-    height: 3px;
-    background-color: #FFF;
-    transition-property: transform;
-    transition-duration: 0.3s;
-}
-#main-nav .cd-close-menu::before {
-    transform: rotate(45deg);
-}
-#main-nav .cd-close-menu::after {
-    transform: rotate(135deg);
 }
 
-#main-content {
-    transition: transform 0.5s;
+.contact-desc:last-child{
+    font-size: 1.4rem;
 }
 
-#main-nav.is-visible {
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-    transform: translateY(0);
+/*footer*/
+footer{
+    font-size: 1.8rem;
+    padding: 2.4rem 0;
+    line-height: 1.8;
+    color: white;
+    background-color: #484848;
+    text-align: center;
 }
