--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,10 @@ html{
 }
 body {
     font-size: 1.6rem;
-    padding-top: 50px;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+
 }
 
 a {
@@ -24,277 +27,90 @@ a {
     text-decoration: none;
 }
 /*/////*/
-header {
+header{
+    background-color: #fff;
     position: fixed;
     top: 0;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    color: white;
-    padding: 0 20px 0 20px;
-    font-size: 2rem;
-    background-color: #0f0f0f;
-    z-index: 1;
-}
-.resume-name{
-    color: #9d9d9d;
-}
-.icon-bar{
-    display:inline-block;
-    float: right;
-    margin-top: 10px;
-    width: 42px;
-    height: 30px;
-    border: 2px solid white;
-    border-radius: 10px;
-}
-
-.icon-bar-line {
-    position: relative;
-    display: inline-block;
-    width: 18px;
-    height: 2px;
-    background-color: white;
-    vertical-align: middle;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-.icon-bar-line::before, .icon-bar-line::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: inherit;
-    transition: all 0.2s;
-}
-
-.icon-bar-line::before {
-    top: -6px;
-}
-.icon-bar-line::after {
-    bottom: -6px;
-}
-
-.icon-bar:hover .icon-bar-line::before{
-    top: -8px;
-}
-
-.icon-bar:hover .icon-bar-line::after{
-    bottom: -8px;
-}
-
-/*section*/
-.section{
-    padding: 20px 20px;
-    line-height: 1.4;
-}
-.section-title-wrapper{
-    text-align: center;
-
-}
-
-.section-title{
-    font-size: 2.6rem;
-    font-weight:300;
-    color: #22A39F;
-    line-height: 1.2;
-}
-
-.section-title-english{
-    font-size: 1.2rem;
-    color: #666666;
-    line-height: 1.2;
-}
-
-hr{
-    margin: 15px 0;
-    width: auto;
-    height: 1px;
-    /*border-color: #727878;*/
-    opacity: 0.6;
-}
-
-.base-info-desc{
-    text-align: left;
-    display: inline-block;
-}
-
-.change-Background-color{
-    background-color: #f2efe0;
-}
-
-.xmu-logo{
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #eee;
-    background-size: cover;
-    background-image:url('../assets/xmu_logo.png');
-}
-
-.list-desc-wrapper{
-    display:inline-block;
-    max-width: 480px;
-    text-align: left;
-}
-
-.experience-time{
-    color: #444;
-}
-
-.ul-skill{
-    list-style-type: disc;
-    padding-left: 40px;
-}
-
-#contact{
-    padding: 30px 20px;
-    background-color: #424242;
-    color: white;
-    font-weight: lighter;
-
-}
-
-#contact-way-icon{
-    display:none;
-    position: fixed;
-    bottom: 0;
     right: 0;
-    background-color: #2b669a;
-    border-radius: 6px 0 0 0;
-    padding: 10px 0 10px 10px ;
-    color: white;
-    font-size: 1.4rem;
-    max-width: 100%;
-    box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
+    height: 56px;
+    z-index: 18;
+    padding: 0 10px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.12);
+    color: rgb(0, 122, 255);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#contact-way-icon:hover{
-    cursor: pointer;
-    background-color: #0a739a;
+.logo {
+    width: 36px;
+    height: 36px;
+    font-size: 20px;
+    font-weight: 500;
+    background-image: url(../assets/logo.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
-#contact-way-icon.is-visible{
-    display: table;
-}
-
-.contact-title{
-    display: table-cell;
-    line-height: 1.2;
-    padding-right: 10px;
-}
-
-.real-contact-content{
-    display: none;
-    vertical-align: middle;
-    line-height: 1.4;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 1.6rem;
-    border-left: 1px solid #fff;
-    transition: all 0.4s ease;
-    width: 0;
-    opacity: 0;
-}
-
-.real-contact-content.is-visible{
-    display: table-cell;
-    width: auto;
-    opacity: 1;
-}
-
-#main-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #eeecf5;
-    /* Force Hardware Acceleration in WebKit */
-    -webkit-transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-
-    transform: translateY(-100%);
-
-    transition-property: transform;
-
-    transition-duration: 0.5s;
-    z-index: 3;
-}
-#main-nav ul {
-    height: 100%;
-}
-#main-nav li {
-    height: 20%;
-}
-
-#main-nav li:hover {
-    background-color: white;
-    cursor: pointer;
-}
-
-#main-nav li a {
-    position: relative;
-    display: block;
-    padding: 0 10%;
-    height: 100%;
-    border-bottom: 1px solid #dfdbec;
-    color: #3a393f;
-    font-size: 2rem;
+.title{
+    font-family: "HelveticaNeue";
+    color: black;
+    font-size: 30px;
+    margin-left: 10px;
     font-weight: bold;
 }
-#main-nav li a span {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-}
-.no-touch #main-nav li a:hover {
-    background-color: #FFF;
-}
-#main-nav li:last-child a {
-    border-bottom: none;
-}
-#main-nav .cd-close-menu {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-color: #d26c64;
-    /* image replacrement */
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-}
-#main-nav .cd-close-menu::before, #main-nav .cd-close-menu::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: 18px;
-    left: 10px;
-    width: 20px;
-    height: 3px;
-    background-color: #FFF;
-    transition-property: transform;
-    transition-duration: 0.3s;
-}
-#main-nav .cd-close-menu::before {
-    transform: rotate(45deg);
-}
-#main-nav .cd-close-menu::after {
-    transform: rotate(135deg);
+
+.main{
+    font-family: "HelveticaNeue-Bold";
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 100px;
+    flex: 1;
+    padding-bottom: 80px;
 }
 
-#main-content {
-    transition: transform 0.5s;
+.main-title{
+    font-size: 2.0rem;
 }
 
-#main-nav.is-visible {
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-    transform: translateY(0);
+.main .download-btn {
+    display: block;
+    width: 200px;
+    height: 47px;
+    line-height: 47px;
+    text-align: center;
+    background-color: #007aff;
+    color: #fff;
+    margin-top: 20px;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+    border-radius: 2px;
+}
+
+
+.main .download-link:nth-last-child(1) {
+    margin-top: 20px;
+    margin-bottom: 60px;
+    font-size: 12px;
+    padding: 0 16px;
+}
+
+.main .download-link {
+    color: rgb(155, 155, 155);
+    margin-bottom: 10px;
+}
+
+footer {
+    background-color: #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
+    color:white;
+    font-size: 14px;
+    padding: 0 20px;
+    text-align: center;
 }
